--- a/example/index.html
+++ b/example/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<link>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mini Webpack</title>
+  <!-- <link rel="stylesheet" href="./style.css"> -->
 </head>
 
 <body>
+  <h1>Hello Webpack</h1>
   <div class="root"></div>
   <script src="../dist/bundle.js"></script>
-  <script>
-    document.querySelector('.root').innerHTML = 'Hello Webpack';
-  </script>
 </body>
 
 </html>
