--- a/example/index.html
+++ b/example/index.html
@@ -11,7 +11,8 @@
 <body>
   <h1>Hello Webpack</h1>
   <div class="root"></div>
-  <script src="../dist/bundle.js"></script>
+  <!-- <script src="../dist/bundle-v1.js"></script> -->
+  <script src="../dist/bundle-v2.js"></script>
 </body>
 
 </html>
